@@ -1,0 +1,5 @@
+mrjob.cat - auto-decompress files based on extension
+====================================================
+
+.. automodule:: mrjob.cat
+    :members:
